--- a/.github/workflows/be-deploy.yml
+++ b/.github/workflows/be-deploy.yml
@@ -38,6 +38,8 @@ jobs:
             echo "Waiting for stack deletion to complete..."
             aws cloudformation wait stack-delete-complete --stack-name $STACK_NAME --region $REGION
           fi
+      - name: Convert TS to JS
+        run:  tsc
       - name: Sam Build
         run:  sam build --template tikkie-deploy.yml
       - name: Sam Package
